sort.basic.bubble.AlgBubbleSort3.scala.error
Erreur de compilation :
AlgBubbleSort3:7: error: not found: value getNombreValeur
    for(i<-0 to getNombreValeur()-2-a){
                ^